sg.tf
resource "aws_security_group" "ACCESS" {
        name = "Bastion-security-group"
        vpc_id = "${aws_vpc.CUSTOM.id}"
        ingress {
                from_port   = 22
                to_port     = 22
                protocol    = "tcp"
                cidr_blocks = ["0.0.0.0/0"]
                }
        egress {
                from_port   = 0
                to_port     = 0
                protocol    = "-1"
                cidr_blocks = ["0.0.0.0/0"]
                }
        tags = {
                Environment = "${var.ENVIRONMENT}"}
}
